# formelsammlung

./: .codeclimate.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  azure-pipelines.yml  noxfile.py  prep_release.py  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: .bug-report.md  .documentation.md  .feature-request.md  .something-else.md
.github/workflows/: code-quality.yml  dependency-safety.yml  publish.yml  test-code.yml  test-docs.yml  update-authors.yml
docs/.changes/: 13.docs
docs/source/: _badges.rst  api.rst  badges.rst  conf.py  flask-inv.txt  index.rst  installation.rst  inv_nox.inv  spelling_dict.txt
docs/source/contribution/: development.rst  git_workflow.rst  issues.rst  pull_requests.rst
src/formelsammlung/: __init__.py  env_exe_runner.py  envvar.py  flask_sphinx_docs.py  nox_session.py  strcalc.py  tox_env_exe_runner.py  venv_utils.py
tests/: test_env_exe_runner.py  test_envvar.py  test_flask_sphinx_docs.py  test_strcalc.py  test_tox_env_exe_runner.py  test_venv_utils.py
tests/nox_session/: conftest.py  test_nox_session.py
